objects/pi__EngageCampaignRecipient__c.object
<CustomObject>
    <fields>
        <fullName>pi__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact</relationshipLabel>
        <relationshipName>EngageCampaign_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead</relationshipLabel>
        <relationshipName>EngageCampaign_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>queued</fullName>
                </value>
                <value>
                    <fullName>composing</fullName>
                </value>
                <value>
                    <fullName>sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User</relationshipLabel>
        <relationshipName>EngageCampaign_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Engage Campaign Recipient</label>
    <listViews>
        <fullName>Nolan_Daigle_EngageCampaignRecipient</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Engage Campaign Recipient</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Campaign Recipients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>